This will contain the navigation as well

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,16 @@
 <html lang="en"/>
 <head>
     <meta charset="UTF-8"/>
-    <title>Home</title>
+    <title>T & S</title>
     <link rel="shortcut icon" href="../resources/images/logo.png"/>
 </head>
 <body>
-<div id="root"></div>
-<script src="../src/components/Register.jsx"></script>
+<div id="root">
+    <div id="navbar"></div>
+    <div id="sidebar"></div>
+    <div id="main"></div>
+</div>
+<div id="footer"></div>
+<script src="../src/components/App.jsx"></script>
 </body>
 </html>
