--- a/public/login.html
+++ b/public/login.html
@@ -3,18 +3,15 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Login</title>
-    <link rel="stylesheet" src="../js/bootstrap.min.css"/>
-    <script src="../js/jquery.min.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
     <link rel="shortcut icon" href="../resources/images/logo.png"/>
 </head>
 <body>
 <div id="main_app">
     <div id="root"></div>
-    <script src="../src/components/login.jsx"></script>
-<!--    <script src="../src/components/Register.jsx"></script>-->
+    <!--    <script src="../src/components/login.jsx"></script>-->
+    <script src="../src/components/Register.jsx"></script>
     <!--<script src="../src/components/App.jsx"></script>-->
-<!--    <script src="../src/components/Dashboard.jsx"></script>-->
+    <!--    <script src="../src/components/Dashboard.jsx"></script>-->
 </div>
 
 </body>
